# BOP_first_semester

./: README.md
lab1/: CMakeLists.txt  main.c
lab10_1/: CMakeLists.txt  input_output.c  input_output.h  main.c  memory.c  mylib.h  sort_funcs.c  sort_funcs.h  structure.h
lab10_2/: CMakeLists.txt  define.h  error_funcs.c  error_funcs.h  input_output.c  input_output.h  main.c  memory.c  memory.h  mylib.h  sort_funcs.c  sort_funcs.h  structure.h
lab11_1/: CMakeLists.txt  file_funcs.c  file_funcs.cpp  file_funcs.h  main.c  memory.c  memory.h  mylib.h  new1.txt
lab11_2/: CMakeLists.txt  change_films_func.c  change_films_func.h  file_operations.c  file_operations.h  films.txt  main.c  main_funcs.c  main_funcs.h  memory.c  memory.h  mylib.h  structure.h  structure_operations.c  structure_operations.h
lab12/: CMakeLists.txt  file_funcs.cpp  file_funcs.h  header.h  main.cpp  program_funcs.cpp  program_funcs.h  structure.h  template_funcs.h
lab3_1/: CMakeLists.txt  main.c
lab3_2/: main.c
lab4/: main.c
lab5/: CMakeLists.txt  main.c
lab6_1/: CMakeLists.txt  main.c
lab6_2/: CMakeLists.txt  main.c
lab7/: CMakeLists.txt  main.c
lab8_1/: CMakeLists.txt  define.h  error_output.c  error_output.h  main.c  main_header.h  memory_functions.c  memory_functions.h  process_text.c  structure_functions.h
lab8_2/: CMakeLists.txt  change_string.c  change_string.h  input_functions.c  input_functions.h  main.c  mystring.h  string_func.c  string_func.h
lab9/: CMakeLists.txt  errors.c  errors.h  io.c  io.h  main.c  memory.c  memory.h  process.c  process.h
(+10 files in other folders)
